--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 <p>A tribute to Elon Musk By <br class="d-md-none" /> Manikanta Pitla</p>
                 <div class="social_acc d-flex flex-row justify-content-center">
                     <a href="https://github.com/manikantaPitla" target="_blank"><i class="fa-brands fa-github"></i></a>
-                    <a href="https://www.linkedin.com/in/manikanta8/" target="_blank"> <i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/manikantapitla/" target="_blank"> <i class="fa-brands fa-linkedin"></i></a>
                 </div>
             </footer>
         </div>
